--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "ethers": "^5.6.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.4.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "postcss-import": "^14.1.0",
-    "tailwindcss": "^3.1.8",
-    "vite": "^3.0.7"
-  }
+    "name": "vite-project",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "@usedapp/core": "^1.1.5",
+        "ethers": "^5.7.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
+        "react-router-dom": "^6.4.2",
+        "styled-components": "^5.3.3",
+        "@ethersproject/contracts": "^5.6.0",
+        "web3": "^1.7.5"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@vitejs/plugin-react": "^2.0.1",
+        "autoprefixer": "^10.4.8",
+        "postcss": "^8.4.16",
+        "postcss-import": "^14.1.0",
+        "tailwindcss": "^3.1.8",
+        "vite": "^3.0.7"
+    }
 }
