--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ethersproject/contracts": "^5.6.0",
         "@tailwindcss/forms": "^0.5.2",
         "@usedapp/core": "^1.1.5",
         "ethers": "^5.7.1",
@@ -17,7 +18,6 @@
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.4.2",
         "styled-components": "^5.3.3",
-        "@ethersproject/contracts": "^5.6.0",
         "web3": "^1.7.5"
     },
     "devDependencies": {
@@ -28,6 +28,7 @@
         "postcss": "^8.4.16",
         "postcss-import": "^14.1.0",
         "tailwindcss": "^3.1.8",
-        "vite": "^3.0.7"
+        "vite": "^3.0.7",
+        "vite-plugin-pwa": "^0.14.0"
     }
 }
